# media-analyzer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  cleanup.yml  release.yml
docs/plans/: 2026-02-18-file-hashing-design.md  2026-02-18-file-hashing-plan.md
media_analyzer/: __init__.py  __main__.py  auth.py  cli.py  config.py  db.py  scanner.py
media_analyzer/jobs/: hasher.py  phash_job.py  runner.py
media_analyzer/probers/: __init__.py  audio.py  base.py  video.py  vr.py
media_analyzer/server/: __init__.py  api.py  app.py
media_analyzer/server/templates/: audio.html  base.html  index.html  settings.html  videos.html  vr.html
tests/: test_api.py  test_db.py  test_hasher.py  test_phash_job.py  test_probers.py  test_runner.py
