[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-analyzer"
version = "0.1.0"
description = "Web-based media file analyzer — scan, browse, and manage video, audio, and VR media metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
