[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "media-analyzer"
dynamic = ["version"]
description = "Web-based media file analyzer — scan, browse, and manage video, audio, and VR media metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "imagehash>=4.3",
    "Pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "media_analyzer/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
